--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -1170,7 +1170,7 @@ public void b() { ... }
 After calling method \texttt{a()}, the trace recorded by the analyzer will be
 \texttt{b() a()} instead of more intuitive \texttt{a() b()}.
 
-\section{Contract Representation}
+\section{Contract Definition Syntax}
 
 The analyzer takes a contract definition as a parameter. At the top level, the
 definition contains pairs of targets and spoilers. Each target and spoiler is
@@ -1287,16 +1287,15 @@ of a contract.}
 
 \section{A Contract Validator Tool}
 
-The contract analyzer should be implemented as a subclass of the \texttt{Tool}
-class. The following methods will be overridden:
+The contract analyzer is implemented as a subclass of the \texttt{Tool} class.
+The following methods are overridden:
 \begin{itemize}
-    \item \texttt{enter()} and \texttt{exit()}, for detecting spoiler and target
-        instances;
+    \item \texttt{exit()}, for detecting spoiler and target instances;
     \item \texttt{acquire()} and \texttt{release()}, for detecting
         synchronization between threads;
     \item \texttt{create()}, for creating shadow data for the new thread;
-    \item \texttt{preStart()}, for initializing shadow data;
-    \item \texttt{postJoin()}, for thread synchronization after joining.
+    \item \texttt{preStart()} and \texttt{postJoin()}, for thread
+        synchronization.
 \end{itemize}
 
 Methods for detecting memory accesses will not be used by the analyzer, and also
@@ -1315,39 +1314,79 @@ clock is updated. The sole purpose of \texttt{acquire()}, \texttt{release()},
 \texttt{create()}, \texttt{preStart()}, and \texttt{postJoin()} methods is to
 update various vector clocks.
 
-Methods \texttt{enter()} and \texttt{exit()} will track target and spoiler
-instances in a thread, and detect contract violations.
+Methods \texttt{exit()} will track target and spoiler instances in a thread, and
+detect contract violations.
 
-\subsection{Detection of Target and Spoiler Instances}
+\subsection{Contract Representation}
+All parts of a contract definition are parsed into a corresponding class
+instance. Each method in a target or spoiler is represented by a
+\texttt{Signature} instance. It consists of a method name, a fully qualified
+name of the enclosing class, and a method descriptor. The method descriptor
+contains information about parameter types. The main purpose of this class is to
+be compared with method invocation events to determine if the invoked method
+matches the method from a contract. Meta-variables are parsed into a
+\texttt{MetaVars} instance.
 
-For each thread, a \texttt{Window} object is kept during the analysis. It
+Each target and spoiler is represented by a \texttt{State} instance that will
+later be used to construct a finite automaton for detecting running target and
+spoiler instances. A target with a single method will be represented by two
+states: one starting state with transition to an accepting state. The transition
+will contain the method signature and meta-variables. During parsing of more
+complex targets and spoilers, these one-method state structures are combined
+together. See Figure \ref{states} for an example. During the analysis,
+\texttt{State} instances will be used for checking whether a given method
+invocation can advance a given target or spoiler.
+
+\begin{figure}[hbt]
+    \begin{center}
+        \label{states}
+        \input{figures/states.tex}
+        \caption{A structure of states representing the following regular
+        expression: \texttt{a(b|cd)e}.}
+    \end{center}
+\end{figure}
+
+A contract is then made up of target--spoiler pairs. When a contract is created,
+a set of all method signatures used in the contract is extracted. During the
+analysis, the set of signatures is used to filter method invocations so that
+only relevant methods are processed by the analyzer.
+
+\subsection{Tracking of Target and Spoiler Instances}
+
+\todo{FiniteAutomaton, Instance, InstanceCollection, Window}
+
+\todo{For each thread, a \texttt{Window} object is kept during the analysis. It
 contains a reference to the thread, a vector clock, and information about target
 and spoiler instances present in the trace window. An instance contains a
 reference to the spoiler or target finite automaton, the current state of the
-automaton, and the values of parameters.
+automaton, and the values of parameters.}
 
-When a window is created, for each target and spoiler, an empty \emph{template}
-instance is added that will be used for detecting new instances in the trace
-window. These instances will remain unchanged during the lifetime of the window.
+\todo{When a window is created, for each target and spoiler, an empty
+\emph{template} instance is added that will be used for detecting new instances
+in the trace window. These instances will remain unchanged during the lifetime
+of the window.}
 
-On method entry, the analyzer will try to advance all instances in a window.
-When a template instance can be advanced, it means that a new instance is
-detected. The template instance is copied, the value of parameters is stored in
-the instance, and the instance is advanced to the next state. When an already
+\todo{On method entry, the analyzer will try to advance all instances in a
+window.  When a template instance can be advanced, it means that a new instance
+is detected. The template instance is copied, the value of parameters is stored
+in the instance, and the instance is advanced to the next state. When an already
 running instance can be advanced, the analyzer must check if the method
-arguments match those stored in the instance.
+arguments match those stored in the instance.}
+{\color{blue}\lipsum[2]}
 
 \subsection{Contract Validation}
 
-On method exit, for all target instances that were just fully accepted, it is
-checked if there is a spoiler instance in other windows that can violate this
+\todo{On method exit, for all target instances that were just fully accepted, it
+is checked if there is a spoiler instance in other windows that can violate this
 target. Likewise, for all accepted spoiler instances, it is checked if there is
 a target instance in other windows that can be violated by this spoiler. If a
 violation is found, it is reported and the analysis ends. If not, the instance
 is replaced by a template instance, which contains the same finite automaton,
 parameter values, and vector clocks of the instance that has just ended. This
 ensures that when a new instance with the same parameter values is detected, it
-will have access to the previously detected instance.
+will have access to the previously detected instance.}
+
+{\color{blue}\lipsum[2]}
 
 \todo{comparing parameters - equals or == ?}
 {\color{blue}\lipsum[2]}
@@ -1443,6 +1482,13 @@ public final class FiniteAutomaton {
 In order to use immutable objects effectively, the Vavr collection library was
 used. It provides immutable replacements for standard Java collections.
 
+\subsection{Functional Programming}
+\todo{side effects}
+{\color{blue}\lipsum[1]}
+
+\todo{referential transparency}
+{\color{blue}\lipsum[1]}
+
 \section{Contract File Parsing}
 One of the inputs to the analyzer is a contract definition. The syntax of the
 definition is described in Chapter \ref{chFour}. Due to its length, it is passed
@@ -1469,13 +1515,14 @@ single state. The whole target or spoiler definition is constructed either by
 concatenating or alternating two states from left to right.
 
 \todo{regex limitation (ab|ac) not allowed}
+{\color{blue}\lipsum[1]}
 
 \section{Changes in Instrumentation}
 RoadRunner was modified to obtain method arguments and return values during the
 analysis. The implementation is based on changes described in \cite{janousek},
 the final version however fixes several major issues. The initial implementation
 adds new fields to the \texttt{MethodEvent} class which holds information about
-a method invocation. These changes were taken without changes from
+a method invocation. These changes were taken without modifications from
 \cite{janousek}.
 
 The main logic is contained in class \todo{break it}
@@ -1485,9 +1532,9 @@ enter and exit events and call the original method. At the beginning, the values
 of method parameters needs to be stored, at the end, return value must be
 stored. The initial implementation described in \cite{janousek} contained
 several issues. Static methods could not be instrumented because of incorrect
-indexing of the local variables. Methods with parameters of type \texttt{double}
-or \texttt{long} could not be instrumented, because the implementation was not
-taking into account that these values require two local variables. These issues
+indexing of local variables. Methods with parameters of type \texttt{double} or
+\texttt{long} could not be instrumented, because the implementation was not
+taking into account that these values occupy two local variables. These issues
 have been fixed and an extensive test suite was created to verify the final
 implementation.
 
