--- a/figures/states.tex
+++ b/figures/states.tex
@@ -7,6 +7,7 @@
     \node[mystyle] at (9,0) (n4) {};
     \node[mystyle] at (12,0) (n5) {};
 
+    \draw[->, thick] (-1,0) -- (n1);
     \draw[->, thick] (n1) -- node[above] {a()} (n2);
     \draw[->, thick] (n2) -- node[above] {b()} (n4);
     \draw[->, thick] (n4) -- node[above] {e()} (n5);
