--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -992,6 +992,11 @@ unpractical. For this reason, several optimizations are introduced in
 \todo{examples of traces}
 {\color{blue}\lipsum[2]}
 
+\subsection{Vector Clocks}
+
+\todo{definition, usage, examples}
+{\color{blue}\lipsum[1-3]}
+
 \subsection{On-the-fly Contract Validation}
 
 To check contract validations, it is not required to keep the entire program
@@ -1402,6 +1407,8 @@ The \texttt{ContractAnalyzer} class is created and called by the
 \texttt{ContractTool} class which directly uses the RoadRunner API. The
 \texttt{ContractTool} class is described in Section \ref{contractTool}.
 
+\todo{synchronization of the tool itself}
+
 \subsection{Tracking of Target and Spoiler Instances}
 
 For each thread, a \texttt{Window} object is kept during the analysis. It
@@ -1469,22 +1476,34 @@ advanced, accepted, and reset.  When \texttt{a(1)} is encountered again, $i_1$
 is advanced but no new instance is added because $i_1$ would match the newly
 created instance.
 
-\subsection{Detection of Contract Violation}
+\subsection{Detection of Contract Violations}
 \label{violations}
 
-\todo{On method exit, for all target instances that were just fully accepted, it
-is checked if there is a spoiler instance in other windows that can violate this
-target. Likewise, for all accepted spoiler instances, it is checked if there is
-a target instance in other windows that can be violated by this spoiler. If a
-violation is found, it is reported and the analysis ends. If not, the instance
-is replaced by a template instance, which contains the same finite automaton,
-parameter values, and vector clocks of the instance that has just ended. This
-ensures that when a new instance with the same parameter values is detected, it
-will have access to the previously detected instance.}
+Each time a target or a spoiler is fully recognized by the analyzer, it must be
+checked whether there are any contract violations. When a method enters a trace
+window, there may be several instances from the same thread that will be fully
+accepted by this method call. For each accepted target and spoiler instance, the
+analyzer will look for conflicting instances in trace windows from other
+threads.
 
-{\color{blue}\lipsum[2]}
+When an instance is fully accepted, the analyzer will retrieve all
+\emph{conflicting instances} from other threads. If the instance is a target
+instance, the analyzer will retrieve instances of a spoiler that can invalidate
+the target, as specified in the contract. Similarly, if the instance is a
+spoiler instance, the analyzer will look for instances of a target that can be
+invalidated by the spoiler. For each conflicting instance, it is checked whether
+the contract parameter values match. Then finally, the analyzer checks vector
+clocks of each matching instance and decides if the two instance interleave each
+other.
 
-\todo{synchronization of the tool itself}
+The two instances may not actually interleave each other. The interleaving is
+decided based on the vector clocks of the beginnings and ends of the two
+instances. Vector clocks are only updated when threads synchronize themselves.
+So the analyzer will marked the two instances as interleaving when there was not
+a synchronization between the threads that would prevent them to interleave each
+other in another run of the program under analysis.
+
+\todo{example}
 
 \section{A Contract Analyzer Tool}
 \label{contractTool}
